# Gpt_First

./: README.md
Gpt_First/: pom.xml
Gpt_First/src/main/java/com/cocola/gpt/: GptFirstApplication.java
Gpt_First/src/main/java/com/cocola/gpt/bo/: GptRequestBo.java
Gpt_First/src/main/java/com/cocola/gpt/constant/: PathConstant.java
Gpt_First/src/main/java/com/cocola/gpt/controller/: GptController.java
Gpt_First/src/main/java/com/cocola/gpt/controller/vo/: ChatChoice.java  ChatCompletionChoice.java  ChatMessage.java  ChatUsage.java  GptError.java  GptRequestVo.java  GptResponseVo.java
Gpt_First/src/main/java/com/cocola/gpt/service/: GptService.java  OpenAiApi.java
Gpt_First/src/main/java/com/cocola/gpt/utils/: HttpClientUtil.java  WebFrameworkUtils.java
Gpt_First/src/main/resources/: application.yml
Gpt_First/src/test/java/com/cocola/gpt/: GptFirstApplicationTests.java
gpt-java/: README.md  pom.xml
gpt-java/src/main/java/com/cocola/gpt/: GptJavaApplication.java
gpt-java/src/main/java/com/cocola/gpt/config/: OpenAiConfig.java
gpt-java/src/main/java/com/cocola/gpt/controller/vo/: ChatMessage.java  GptError.java
gpt-java/src/main/java/com/cocola/gpt/exception/: GptException.java
gpt-java/src/main/java/com/cocola/gpt/handler/: GlobalExceptionHandler.java
gpt-java/src/main/resources/: application.yml  log4j2.xml
gpt-java/src/test/java/com/cocola/gpt/: GptJavaApplicationTests.java
gpt-rust/: .env  Cargo.toml  README.md
gpt-rust/src/common/: errors.rs
gpt-rust/src/models/: gpt.rs
