[package]
name = "gpt-rust"
version = "0.1.0"
edition = "2021"
default-run = "service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "service"
